--- a/index.html
+++ b/index.html
@@ -76,3 +76,12 @@
 
 </body>
 </html>
+<div class="filters">
+    <button class="filter-btn" data-filter="all">Tous</button>
+    <button class="filter-btn" data-filter="ecommerce">E-commerce</button>
+    <button class="filter-btn" data-filter="vitrine">Vitrine</button>
+</div>
+<div class="portfolio-items">
+    <div class="portfolio-item ecommerce">...</div>
+    <div class="portfolio-item vitrine">...</div>
+</div>
