--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- AUTH MODAL PRO -->
+<div id="authModalPro" class="auth-modal-pro">
+  <div class="auth-modal-content-pro">
+    <span class="close" id="closeAuthPro">&times;</span>
+    
+    <div class="auth-forms-pro">
+      <!-- LOGIN -->
+      <div class="login-form-pro">
+        <h2>Connexion</h2>
+        <input type="text" id="loginUserPro" placeholder="Nom d'utilisateur">
+        <input type="password" id="loginPassPro" placeholder="Mot de passe">
+        <button id="loginSubmitPro">Se connecter</button>
+        <p>Pas de compte ? <span id="showSignupPro">Inscrivez-vous</span></p>
+      </div>
+      
+      <!-- SIGNUP -->
+      <div class="signup-form-pro">
+        <h2>Inscription</h2>
+        <input type="text" id="signupUserPro" placeholder="Nom d'utilisateur">
+        <input type="password" id="signupPassPro" placeholder="Mot de passe">
+        <button id="signupSubmitPro">S’inscrire</button>
+        <p>Déjà un compte ? <span id="showLoginPro">Connexion</span></p>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="auth-buttons">
   <button id="loginBtn">Connexion</button>
   <button id="signupBtn">Inscription</button>
