--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- AUTH MODAL PRO -->
+<!-- AUTH MODAL PRO -->
 <div id="authModalPro" class="auth-modal-pro">
   <div class="auth-modal-content-pro">
     <span class="close" id="closeAuthPro">&times;</span>
@@ -34,10 +34,10 @@
     </div>
   </div>
 </div>
-<div class="auth-buttons">
-  <button id="loginBtn">Connexion</button>
-  <button id="signupBtn">Inscription</button>
-</div>
+
+<!-- BOUTONS HEADER -->
+<button id="loginBtnPro" type="button">Connexion</button>
+<button id="signupBtnPro" type="button">Inscription</button>
 
 <
 <!-- HEADER -->
