--- a/index.html
+++ b/index.html
@@ -76,3 +76,9 @@
 
 </body>
 </html>
+<div class="card">
+  <h3>Site vitrine</h3>
+  <p>€49.99</p>
+  <!-- AJOUT -->
+  <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
+</div>
