--- a/index.html
+++ b/index.html
@@ -82,3 +82,9 @@
   <!-- AJOUT -->
   <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
 </div>
+<form action="https://formspree.io/f/mdkwwbvv" method="POST">
+  <input type="text" name="name" placeholder="Nom" required>
+  <input type="email" name="email" placeholder="Email" required>
+  <textarea name="message" placeholder="Votre message" required></textarea>
+  <button type="submit">Envoyer</button>
+</form>
