--- a/index.html
+++ b/index.html
@@ -88,3 +88,53 @@
   <textarea name="message" placeholder="Votre message" required></textarea>
   <button type="submit">Envoyer</button>
 </form>
+</body>
+<!-- Section : Nos créations -->
+<section id="creations" style="padding:80px 20px; text-align:center; background:#f9f9f9;">
+  <h2 style="font-size:2em; color:#333;">Nos créations</h2>
+  <p style="color:#666;">Découvrez quelques-uns des sites que nous avons conçus pour nos clients.</p>
+
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px;">
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x180" alt="Site 1" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Shopora Market</h3>
+      <p style="color:#777;">Un site e-commerce moderne et rapide.</p>
+    </div>
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x180" alt="Site 2" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Buildora Studio</h3>
+      <p style="color:#777;">Un site de portfolio élégant et minimaliste.</p>
+    </div>
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x180" alt="Site 3" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Webora Agency</h3>
+      <p style="color:#777;">Un site d’agence professionnelle prêt à l’emploi.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Section : Pourquoi choisir Shopora -->
+<section id="why-us" style="padding:80px 20px; text-align:center; background:white;">
+  <h2 style="font-size:2em; color:#333;">Pourquoi choisir Shopora ?</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:30px; margin-top:40px;">
+    <div style="width:280px;">
+      <h3>💡 Expertise</h3>
+      <p style="color:#777;">Nos sites sont créés avec des technologies modernes et un design soigné.</p>
+    </div>
+    <div style="width:280px;">
+      <h3>⚡ Rapidité</h3>
+      <p style="color:#777;">Nous livrons rapidement des sites prêts à l’emploi et optimisés.</p>
+    </div>
+    <div style="width:280px;">
+      <h3>🤝 Fiabilité</h3>
+      <p style="color:#777;">Des centaines de clients satisfaits nous font confiance.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Section : Contact -->
+<section id="contact" style="padding:80px 20px; background:#f4f4f4; text-align:center;">
+  <h2>Contactez-nous</h2>
+  <p style="color:#666;">Prêt à acheter ou à créer votre site ? Envoyez-nous un message !</p>
+  <a href="mailto:contact@shopora.com" style="display:inline-block; margin-top:20px; padding:12px 25px; background:#007bff; color:white; border-radius:8px; text-decoration:none;">Nous écrire</a>
+</section>
