--- a/index.html
+++ b/index.html
@@ -138,3 +138,27 @@
   <p style="color:#666;">Prêt à acheter ou à créer votre site ? Envoyez-nous un message !</p>
   <a href="mailto:contact@shopora.com" style="display:inline-block; margin-top:20px; padding:12px 25px; background:#007bff; color:white; border-radius:8px; text-decoration:none;">Nous écrire</a>
 </section>
+</body>
+<!-- Section : Nos créations (avec vraies images) -->
+<section id="creations" style="padding:80px 20px; text-align:center; background:#f9f9f9;">
+  <h2 style="font-size:2em; color:#333;">Nos créations</h2>
+  <p style="color:#666;">Découvrez quelques-uns des sites que nous avons conçus pour nos clients.</p>
+
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px;">
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://images.unsplash.com/photo-1616469829869-9b6e9f8d2bdf?auto=format&fit=crop&w=800&q=80" alt="Site e-commerce" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Shopora Market</h3>
+      <p style="color:#777;">Un site e-commerce moderne et rapide, parfait pour les boutiques en ligne.</p>
+    </div>
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80" alt="Portfolio site" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Buildora Studio</h3>
+      <p style="color:#777;">Un site de portfolio élégant et minimaliste pour créatifs et freelances.</p>
+    </div>
+    <div style="width:300px; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=800&q=80" alt="Agency site" style="width:100%; border-radius:10px;">
+      <h3 style="margin-top:10px;">Webora Agency</h3>
+      <p style="color:#777;">Un site d’agence professionnelle prêt à l’emploi et optimisé SEO.</p>
+    </div>
+  </div>
+</section>
