--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <body>
 
 <!-- HEADER -->
+  <!-- Exemple : section hero -->
+<section id="hero">
+  <h1>Bienvenue sur Shopora</h1>
+  <p>Obtenez votre site web professionnel prêt à l’emploi.</p>
+
+  <!-- Boutons -->
+  <div class="hero-buttons">
+    <a href="login.html" class="btn btn-primary">Connexion</a>
+    <a href="login.html" class="btn btn-secondary">Inscription</a>
+  </div>
+</section>
 <header>
   <div class="container">
     <div class="logo">Shopora</div>
