--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
   <p>&copy; 2025 Shopora. Tous droits réservés.</p>
   <p>Email: contact@shopora.com | <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
 </footer>
-
+<!-- Chat IA Shopora -->
+<div id="shopora-chat">
+  <div id="chat-box"></div>
+  <input type="text" id="chat-input" placeholder="Posez vos questions sur Shopora..." />
+  <button id="chat-send">Envoyer</button>
+</div>
 </body>
 </html>
 <div class="card">
