--- a/index.html
+++ b/index.html
@@ -92,18 +92,38 @@
   <button id="chat-send">Envoyer</button>
 </div>
 </body>
+  <script>
+const input = document.getElementById('chat-input');
+const send = document.getElementById('chat-send');
+const chatBox = document.getElementById('chat-box');
+
+send.onclick = async () => {
+  const question = input.value.trim();
+  if(!question) return;
+  chatBox.innerHTML += `<p><b>Vous :</b> ${question}</p>`;
+  input.value = '';
+  chatBox.scrollTop = chatBox.scrollHeight;
+
+  const response = await fetch('https://api.openai.com/v1/chat/completions', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+      'Authorization': 'Bearer VOTRE_CLE_API'  // Remplace par ta clé OpenAI
+    },
+    body: JSON.stringify({
+      model: 'gpt-3.5-turbo',
+      messages: [{role: 'user', content: question}]
+    })
+  });
+
+  const data = await response.json();
+  const answer = data.choices[0].message.content;
+  chatBox.innerHTML += `<p><b>IA :</b> ${answer}</p>`;
+  chatBox.scrollTop = chatBox.scrollHeight;
+};
+</script>
 </html>
-<div class="card">
-  <h3>Site vitrine</h3>
-  <p>€49.99</p>
-  <!-- AJOUT -->
-  <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
-</div>
-<form action="https://formspree.io/f/mdkwwbvv" method="POST">
-  <input type="text" name="name" placeholder="Nom" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <textarea name="message" placeholder="Votre message" required></textarea>
-  <button type="submit">Envoyer</button>
+
 </form>
 </body>
 <!-- Section : Nos créations -->
