--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+  <div style="text-align:center; margin-top:40px;">
+  <h2>🔐 Connexion à Shopora</h2>
+
+  <input type="email" id="loginEmail" placeholder="Email"><br><br>
+  <input type="password" id="loginPassword" placeholder="Mot de passe"><br><br>
+  <button id="loginBtn">Se connecter</button>
+
+  <hr>
+
+  <h3>🆕 Créer un compte</h3>
+  <input type="email" id="registerEmail" placeholder="Email"><br><br>
+  <input type="password" id="registerPassword" placeholder="Mot de passe"><br><br>
+  <button id="registerBtn">S'inscrire</button>
+
+  <br><br>
+  <button id="logoutBtn">Se déconnecter</button>
+</div>
 <body>
 
 <!-- HEADER -->
