--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBqB5D2Pg8hQzJUHmV937aas6oAOUJPiR4",
+    authDomain: "buildora-auth.firebaseapp.com",
+    projectId: "buildora-auth",
+    storageBucket: "buildora-auth.firebasestorage.app",
+    messagingSenderId: "690900106531",
+    appId: "1:690900106531:web:77afcdd935cfe712f1e096",
+    measurementId: "G-2ZX7P24DPL"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 <body>
 
 <!-- HEADER -->
