--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+  <header>
+  <h1>Shopora</h1>
+  <nav>
+    <a href="shop.html">Boutique</a>
+    <a href="cart.html" id="cart-link">🛒 Panier (<span id="cart-count">0</span>)</a>
+  </nav>
+</header>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
