--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
   <div class="product-cards">
     <div class="card">
       <img src="produit1.jpg" alt="Produit 1">
-      <h3>Site vitrine</h3>
+      <h3>vetement</h3>
       <p>€49.99</p>
       <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
     </div>
     <div class="card">
       <img src="produit2.jpg" alt="Produit 2">
-      <h3>Site e-commerce</h3>
+      <h3>electronique</h3>
       <p>€99.99</p>
       <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
     </div>
     <div class="card">
       <img src="produit3.jpg" alt="Produit 3">
-      <h3>Landing page</h3>
+      <h3>jouet</h3>
       <p>€29.99</p>
       <a href="https://payoneer.me/TON_COMPTE" target="_blank" class="btn">Payer maintenant</a>
     </div>
