--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,7 @@ document.querySelectorAll(".product-card button").forEach((btn) => {
   });
 });
 </script>
+</body>
 <section class="products">
   <div class="product">
     <img src="img/tennis.jpg" alt="Tennis">
